Services/Security/Wazuh/wazuh-dashboard.ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wazuh-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`wazuh.saaby.no`)
      kind: Rule
      services:
        - name: dashboard
          port: 443
          scheme: https
          serversTransport: wazuh-dashboard-insecure
  tls:
    secretName: wazuh-dashboard-tls
